--- a/templates/aurora_mysql.template.yaml
+++ b/templates/aurora_mysql.template.yaml
@@ -231,6 +231,17 @@ Conditions:
         - !Equals
           - !Ref DBEngineMode
           - 'global'
+  EnableIAMDBAuth:
+    - !Or
+      - !Equals
+        - !Ref DBEngineMode
+        - 'provisioned'
+      - !Equals
+        - !Ref DBEngineMode
+        - 'global'
+      - !Equals
+        - !Ref DBEngineMode
+        - 'multimaster'
   DoCreateDatabase:
     !Not
       - !Equals
@@ -688,6 +699,7 @@ Resources:
       MasterUsername: !Ref DBMasterUsername
       Port: !Ref DBPort
       StorageEncrypted: !If [UseDatabaseEncryption, !Ref DBAllocatedStorageEncrypted, !Ref 'AWS::NoValue']
+      EnableIAMDatabaseAuthentication: !If [EnableIAMDBAuth, true, !Ref 'AWS::NoValue']
       Tags: 
         - 
           Key: Name
