Enabling CloudWatch Log export for error,slow query and audit logs Fixes https://github.com/aws-quickstart/quickstart-amazon-aurora-mysql/issues/18

--- a/templates/aurora_mysql.template.yaml
+++ b/templates/aurora_mysql.template.yaml
@@ -714,6 +714,7 @@ Resources:
       StorageEncrypted: !If [UseDatabaseEncryption, !Ref DBAllocatedStorageEncrypted, !Ref 'AWS::NoValue']
       EnableIAMDatabaseAuthentication: !If [EnableIAMDBAuth, true, !Ref 'AWS::NoValue']
       BacktrackWindow: !If [EnableBackTrack, 259200, !Ref 'AWS::NoValue']
+      EnableCloudwatchLogsExports: ['error','slowquery', 'audit']
       Tags: 
         - 
           Key: Name
