--- a/templates/aurora_mysql-master.template.yaml
+++ b/templates/aurora_mysql-master.template.yaml
@@ -22,19 +22,19 @@ Metadata:
         default: Database configuration
       Parameters:
       - DBName
+      - DBMasterUsername
+      - DBMasterUserPassword
+      - DBPort
       - DBAutoMinorVersionUpgrade
       - DBBackupRetentionPeriod
       - DBEngineVersion
       - DBEngineMode
-      - DBInstanceClass
-      - DBMasterUsername
-      - DBMasterUserPassword
-      - DBPort
-      - DBAllocatedStorageEncrypted
       - DBMultiAZ
+      - DBInstanceClass
+      - DBAllocatedStorageEncrypted
       - NotificationList
     - Label:
-        default: Severless 
+        default: Serverless (Applicable only for Database Engine Mode = Serverless)
       Parameters:                  
         - ServerlessMinCapacityUnit                                
         - ServerlessMaxCapacityUnit
@@ -248,7 +248,7 @@ Parameters:
     - db.r4.large
     ConstraintDescription: "Must select a valid database instance type."
     Default: db.r4.large
-    Description: "The name of the compute and memory capacity class of the database instance."
+    Description: "The name of the compute and memory capacity class of the database instance. Not Applicable for Aurora Serverless. Supported instance types for Aurora Multi-Master is db.r4.[2/4/8]xlarge only currently."
     Type: String
   DBMasterUserPassword: 
     AllowedPattern: "(?=^.{6,255}$)((?=.*\\d)(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[^A-Za-z0-9])(?=.*[a-z])|(?=.*[^A-Za-z0-9])(?=.*[A-Z])(?=.*[a-z])|(?=.*\\d)(?=.*[A-Z])(?=.*[^A-Za-z0-9]))^.*"
@@ -278,7 +278,7 @@ Parameters:
       - "true"
       - "false"
     Default: "true"
-    Description: "Specifies if the database instance is a multiple Availability Zone deployment."
+    Description: "Specifies if the database instance is a multiple Availability Zone deployment. Not Applicable for Aurora Serverless."
     Type: String
   DBName: 
     AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
