* Adding VPC Submodule * Fixing Taskcat parameters * Fixing QSS3KeyPrefix in master template

--- a/ci/taskcat.yml
+++ b/ci/taskcat.yml
@@ -22,3 +22,5 @@ tests:
   aurora-mysql:
     parameter_input: amazon-aurora-mysql.json
     template_file: aurora_mysql-master.template.yaml
+    regions:
+      - us-east-1
