--- a/templates/aurora_mysql-master.template.yaml
+++ b/templates/aurora_mysql-master.template.yaml
@@ -1,5 +1,7 @@
 ---
+AWSTemplateFormatVersion: '2010-09-09'
 Description: "AWS VPC + Aurora MySql, Do Not Remove Apache License Version 2.0 (qs-) Jun,15,2019"
+
 Metadata:
   LICENSE: Apache License Version 2.0
   AWS::CloudFormation::Interface:
@@ -24,6 +26,7 @@ Metadata:
         Parameters:
           - DBName
           - DBMasterUsername
+          - RotateDBPassword
           - DBMasterUserPassword
           - DBPort
           - DBAutoMinorVersionUpgrade
@@ -33,8 +36,8 @@ Metadata:
           - DBMultiAZ
           - DBInstanceClass
           - DBAllocatedStorageEncrypted
+          - DBCWLogExports
           - NotificationList
-          - RotateDBPassword
       - Label:
           default: 'Serverless (Applicable only for Database Engine Mode = Serverless)'
         Parameters:
@@ -67,6 +70,8 @@ Metadata:
         default: Database name
       DBAllocatedStorageEncrypted:
         default: Database encryption enabled
+      DBCWLogExports:
+        default: Database CloudWatch Log Exports
       DBAutoMinorVersionUpgrade:
         default: Database auto minor version upgrade
       DBBackupRetentionPeriod:
@@ -123,13 +128,14 @@ Metadata:
         default: Pause compute capacity
       ServerlessSecondsUntilAutoPause:
         default: Pause after time of inactivity
+        
 Parameters:
   RotateDBPassword:
-    Default: true
+    Default: false
     AllowedValues:
       - true
       - false
-    Description: Whether or not to rotate the database password on a schedule.
+    Description: Whether or not to rotate the database password on a schedule(every 89 days).
     Type: String
   AvailabilityZones:
     Description: >-
@@ -202,17 +208,23 @@ Parameters:
       - false
     Description: Whether or not to encrypt the database.
     Type: String
+  DBCWLogExports:
+    Type: CommaDelimitedList
+    Default: ''
+    Description: "Specify comma delimited list of Database logs (error, slowquery, audit) to export to CloudWatch Logs."
   DBAutoMinorVersionUpgrade:
     AllowedValues:
       - "true"
       - "false"
     Default: "false"
-    Description: "Select true to set up auto minor version upgrade."
+    Description: "Select true to enable auto minor version upgrade."
     Type: String
   DBBackupRetentionPeriod:
-    Default: "35"
-    Description: "The number of days for which automatic database snapshots are retained."
-    Type: String
+    Default: 35
+    Description: "The number of days for which automatic database snapshots are retained from 1 to 35 days."
+    Type: Number
+    MinValue: 1
+    MaxValue: 35
   DBEngineVersion:
     Description: Select Database Engine Version
     Type: String
@@ -222,17 +234,18 @@ Parameters:
       - 'Aurora-MySQL5.6-1.19.0'
       - 'Aurora-MySQL5.6-1.19.1'
       - 'Aurora-MySQL5.6-1.19.2'
+      - 'Aurora-MySQL5.6-1.19.5'
       - 'Aurora-MySQL5.7.12'
       - 'Aurora-MySQL5.7-2.03.2'
       - 'Aurora-MySQL5.7-2.03.3'
       - 'Aurora-MySQL5.7-2.03.4'
       - 'Aurora-MySQL5.7-2.04.0'
       - 'Aurora-MySQL5.7-2.04.1'
-      - 'Aurora-MySQL5.7-2.04.1.2'
       - 'Aurora-MySQL5.7-2.04.2'
       - 'Aurora-MySQL5.7-2.04.3'
       - 'Aurora-MySQL5.7-2.04.4'
       - 'Aurora-MySQL5.7-2.04.5'
+      - 'Aurora-MySQL5.7-2.04.6'
   DBEngineMode:
     Description: The engine mode of the cluster. Currently Aurora Serverless, Global Database and Multi-Master is available for Aurora-MySQL5.6.10a. Aurora Parallel Query is available for Aurora MySQL5.6-x versions.
     Type: String
@@ -241,10 +254,10 @@ Parameters:
       - 'provisioned'
       - 'parallelquery'
       - 'serverless'
-  DBInstanceClass:
-    AllowedValues:
       - 'global'
       - 'multimaster'
+  DBInstanceClass:
+    AllowedValues:
       - db.r5.12xlarge
       - db.r5.4xlarge
       - db.r5.2xlarge
@@ -263,7 +276,7 @@ Parameters:
   DBMasterUserPassword:
     AllowedPattern: ^(?=^.{8,255}$)(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[^A-Za-z0-9])(?!.*[@/"']).*$
     ConstraintDescription: "Min 8 chars. Must include 1 uppercase, 1 lowercase, 1 number, 1 (non / @ \" ') symbol"
-    Description: "The database admin account password."
+    Description: "The database admin account password. Must include 1 uppercase, 1 lowercase, 1 number, 1 (non / @ \" ') symbol."
     MaxLength: "64"
     MinLength: "8"
     NoEcho: "True"
@@ -278,7 +291,7 @@ Parameters:
     Type: String
   DBPort:
     Default: 3306
-    Description: "The port the instance will listen for connections on. Serverless engine mode supports port 3306."
+    Description: "The port on which the DB instance will listen for connections. Aurora Serverless currently supports port 3306 only."
     Type: Number
     ConstraintDescription: 'Must be in the range [1150-65535].'
     MinValue: 1150
@@ -387,6 +400,7 @@ Parameters:
     Default: 300
     MaxValue: 86400
     MinValue: 300
+    
 Conditions:
   GovCloudCondition: !Equals
     - !Ref 'AWS::Region'
@@ -394,17 +408,14 @@ Conditions:
   EnableBastionAccess: !Equals
     - !Ref EnableBastion
     - "true"
+    
 Resources:
   VPCStack:
     Type: 'AWS::CloudFormation::Stack'
     Properties:
       TemplateURL: !Sub
         - https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}submodules/quickstart-aws-vpc/templates/aws-vpc.template
-        - QSS3Region:
-            !If
-            - GovCloudCondition
-            - s3-us-gov-west-1
-            - s3
+        - QSS3Region: !If [GovCloudCondition, s3-us-gov-west-1, s3]
       Parameters:
         AvailabilityZones: !Join
           - ','
@@ -438,6 +449,7 @@ Resources:
         DBName: !Ref DBName
         DBAutoMinorVersionUpgrade: !Ref DBAutoMinorVersionUpgrade
         DBAllocatedStorageEncrypted: !Ref DBAllocatedStorageEncrypted
+        DBCWLogExports: !Ref DBCWLogExports
         DBBackupRetentionPeriod: !Ref DBBackupRetentionPeriod
         DBEngineVersion: !Ref DBEngineVersion
         DBEngineMode: !Ref DBEngineMode
