--- a/templates/aurora_mysql.template.yaml
+++ b/templates/aurora_mysql.template.yaml
@@ -1176,7 +1176,7 @@ Outputs:
   DBName:
     Description: "Amazon Aurora database name"
     Value: !Ref DBName
-  AuroraClusterEndPoint:
+  AuroraClusterEndpoint:
     Description: "Amazon Aurora Cluster/Writer endpoint"
     Value: !Sub ${AuroraDBCluster.Endpoint.Address}
   AuroraReaderEndpoint:
