--- a/ci/taskcat.yml
+++ b/ci/taskcat.yml
@@ -23,4 +23,16 @@ tests:
     parameter_input: amazon-aurora-mysql.json
     template_file: aurora_mysql-master.template.yaml
     regions:
-      - us-east-1
+    - ap-northeast-1
+    - ap-northeast-2
+    - ap-south-1
+    - ap-southeast-1
+    - ap-southeast-2
+    - ca-central-1
+    - eu-central-1
+    - eu-west-1
+    - sa-east-1
+    - us-east-1
+    - us-east-2
+    - us-west-1
+    - us-west-2
