--- a/templates/aurora_mysql.template.yaml
+++ b/templates/aurora_mysql.template.yaml
@@ -243,12 +243,11 @@ Parameters:
     MinValue: 1150
     MaxValue: 65535
   DBName:
-    AllowedPattern: "[a-zA-Z]-[a-zA-Z0-9]*"
+    AllowedPattern: "[a-zA-Z](-?)[a-zA-Z0-9]*"
     Default: 'AuroraMySQLDB'
     Description: "Name of the Amazon Aurora database."
     MaxLength: "63"
     MinLength: "5"
-    Default: 'AuroraMySQLDB'
     Type: String
   CustomDBSecurityGroup:
     Description: "ID of the security group (e.g., sg-0234se). One will be created for you if left empty."
