--- a/ci/taskcat.yml
+++ b/ci/taskcat.yml
@@ -11,7 +11,7 @@ global:
     - ca-central-1
     - eu-central-1
     - eu-west-1
-    - sa-east-1
+#    - sa-east-1
     - us-east-1
     - us-east-2
     - us-west-1
@@ -22,17 +22,4 @@ tests:
   aurora-mysql:
     parameter_input: amazon-aurora-mysql.json
     template_file: aurora_mysql-master.template.yaml
-    regions:
-    - ap-northeast-1
-    - ap-northeast-2
-    - ap-south-1
-    - ap-southeast-1
-    - ap-southeast-2
-    - ca-central-1
-    - eu-central-1
-    - eu-west-1
-    - sa-east-1
-    - us-east-1
-    - us-east-2
-    - us-west-1
-    - us-west-2
+
