--- a/templates/aurora_mysql.template.yaml
+++ b/templates/aurora_mysql.template.yaml
@@ -243,6 +243,8 @@ Parameters:
     MinValue: 1150
     MaxValue: 65535
   DBName:
+    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
+    ConstraintDescription: "Must contain 5 to 64 alphanumeric characters"
     Default: 'AuroraMySQLDB'
     Description: "Name of the Amazon Aurora database."
     MaxLength: "63"
